[package]
name = "litra-glowd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://github.com/ruabmbua/hidapi-rs/issues/68
#hidapi = { version = "1.4", default-features = false, features = ["linux-shared-hidraw"] }
hidapi = "1.4"
zbus = "2.2"
